--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "start": "nodemon src/index.js localhost 8080"
   },
   "dependencies": {
-    "@vercel/node": "1.7.4"
+    "@vercel/node": "1.7.4",
+    "dot-prop": "5.1.1"
   },
-  "devDependencies": {
-    "nodemon": "1.18.4"
-  },
+  "devDependencies": {},
   "keywords": [
     "rest",
     "express",
